Off canvas menu z-index fix

--- a/wp-content/themes/liteSource/assets/style/partials/_off-canvas-menu.scss
+++ b/wp-content/themes/liteSource/assets/style/partials/_off-canvas-menu.scss
@@ -37,7 +37,7 @@
     &.show{
       display:block;
       opacity: 1;
-      z-index: 999;
+      z-index: 9999999999;
     }
     @include media(">lg") {
       display:none!important;
