--- a/wp-content/themes/liteSource/assets/style/style.css
+++ b/wp-content/themes/liteSource/assets/style/style.css
@@ -1668,7 +1668,7 @@ body a {
 .off-canvas-menu.show {
   display: block;
   opacity: 1;
-  z-index: 999;
+  z-index: 9999999999;
 }
 @media (min-width: 993px) {
   .off-canvas-menu {
